# rag-workflow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  QWEN.md  README.md  docker-compose.yaml  ingest_data.ipynb  pyproject.toml  requirements.txt  test.ipynb
.claude/commands/: update_md.md
app/: api.py  config.py  main.py  models.py  rag_workflow.py  router.py  test.ipynb  utils.py  vector_store.py  web_loader.py
app/core/: config.py
app/db/: vector_db.py  vector_store.py
app/ingestion/: ingest.py
app/ingestion/web_loader/: bs_utils.py
app/models/: models.py
app/utils/: utils.py
app/web_loader/: bs_loader.py
app/workflow/: __init__.py  rag_workflow.py  reranker.py  router.py  vector_store.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: confirm-dialog.tsx  sidebar.tsx
frontend/src/app/components/chat/: chat-list.tsx  chat-view.tsx  model-select.tsx
frontend/src/app/components/knowledge/: knowledge-base-view.tsx
frontend/src/app/hooks/: useChat.ts  useChats.ts  useKnowledgeBase.tsx
frontend/src/app/types/: dashboard.ts
frontend/src/app/utils/: formatters.ts  id.ts
notebooks/: evaluation_records.json  ingest_data.ipynb  ragas_eval.ipynb
src/: config.py  main.py  models.py  rag_workflow.py  test.ipynb  utils.py  vector_store.py  web_loader.py
src/app/: api.py  main.py
src/app/core/: config.py
src/app/db/: chat_db.py  vector_db.py
src/app/ingestion/: cli.py  ingest.py  service.py
src/app/ingestion/pdf_loader/: pdf_to_text.py
src/app/ingestion/web_loader/: bs_loader.py  bs_utils.py
src/app/models/: models.py
src/app/utils/: citation_parser.py  id.py  progress.py  utils.py
src/app/workflow/: rag_workflow.py  reranker.py  router.py
