[project]
name = "rag-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi[standard]>=0.115.12",
    "fastembed>=0.7.1",
    "ipykernel>=6.29.5",
    "langgraph>=0.3.30",
    "openai>=1.74.0",
    "pydantic-settings>=2.8.1",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.15.1",
    "streamlit>=1.44.1",
    "unstructured[md]>=0.17.2",
    "rich>=13.7.0",
    "ipywidgets>=8.1.7",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[project.optional-dependencies]
test = [
    "langchain-community>=0.3.29",
    "ragas>=0.3.2",
    "langchain[together]>=0.3.27",
]