[project]
name = "rag-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi[standard]>=0.119.1",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "langgraph>=1.0.1",
    "openai>=1.109.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.0",
    "unstructured[md]>=0.18.15",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[project.optional-dependencies]
test = [
    "langchain-community>=0.3.29",
    "ragas>=0.3.2",
    "datasets>=4.1.1",
    "langchain-together>=0.3.1",
]
